--- a/package.json
+++ b/package.json
@@ -1,7 +1,15 @@
 {
   "name": "linqbin-bot",
   "module": "./src/index.ts",
+  "version": "0.0.1",
   "type": "module",
+  "author": "Daniel Riccio",
+  "scripts": {
+    "start": "bun run src/index.ts",
+    "dev": "bun run --watch src/index.ts",
+    "run-migrations": "bun run src/data/migrate.ts",
+    "generate-migrations": "bunx drizzle-kit generate:sqlite --schema ./src/data/models/index.ts"
+  },
   "devDependencies": {
     "@types/bun": "latest",
     "drizzle-kit": "^0.20.11"
