--- a/package.json
+++ b/package.json
@@ -12,12 +12,14 @@
   },
   "devDependencies": {
     "@types/bun": "latest",
+    "@types/crypto-js": "^4.2.1",
     "drizzle-kit": "^0.20.11"
   },
   "peerDependencies": {
     "typescript": "^5.0.0"
   },
   "dependencies": {
+    "crypto-js": "^4.2.0",
     "discord.js": "^14.14.1",
     "drizzle-orm": "^0.29.3"
   }
