--- a/package.json
+++ b/package.json
@@ -1,7 +1,8 @@
 {
   "name": "linqbin-bot",
+  "license": "MIT",
   "module": "./src/index.ts",
-  "version": "0.0.1",
+  "version": "1.0.0",
   "type": "module",
   "author": "Daniel Riccio",
   "scripts": {
@@ -13,6 +14,7 @@
   "devDependencies": {
     "@types/bun": "latest",
     "@types/crypto-js": "^4.2.1",
+    "@types/entropy-string": "^4.2.3",
     "drizzle-kit": "^0.20.11"
   },
   "peerDependencies": {
@@ -21,6 +23,7 @@
   "dependencies": {
     "crypto-js": "^4.2.0",
     "discord.js": "^14.14.1",
-    "drizzle-orm": "^0.29.3"
+    "drizzle-orm": "^0.29.3",
+    "entropy-string": "^4.2.0"
   }
 }
