--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -6,5 +6,5 @@ services:
       - .env
     container_name: linqbot
     volumes:
-      - ~/.linqbot:/app/data
+      - ~/.linqbot:/app/db
     command: 'sh ./migrate-and-start.sh'
